--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ cache: pip
 install:
   - pip install -r requirements.txt
 script:
-  - python earningsCalendarScraper.py
+  - python ./EarningsScraper/earningsCalendarScraper.py
